Added required directories and mentioned cobertura in readme

--- a/build.properties
+++ b/build.properties
@@ -60,7 +60,7 @@ addlClassesDir=AddlClasses
 testLoggingProperties="test.logging.properties"
 
 # Code coverage tool installation
-cobertura.dir=/DevelopmentTools/cobertura
+cobertura.dir=cobertura
 
 # Java client application manifest
 manifestForJAR=ManifestJAR.txt
