Added two entries to the build.xml to create dirs needed if they don't exist

--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,8 @@
     <mkdir dir="${buildDir}"/>
     <mkdir dir="${distDir}"/>
     <mkdir dir="${genDir}/bin"/>
+  	<mkdir dir="${addlClassesDir}"/>
+  	<mkdir dir="${envLibsDir}"/>
   </target>
 
   <!-- compilation -->
