Moved coburtura and junit jars to test-lib and updated build to reflect new location

--- a/build.properties
+++ b/build.properties
@@ -50,6 +50,9 @@ javadocDir=javadoc
 # JARs required at compile-time only - not to be included in WAR
 envLibsDir=EnvLibs
 
+# JARs required at compile tome to support testing - not to be included in JAR
+testLibsDir=test-lib
+
 # JARs required for compiling and runtime
 thirdPartyLibsDir=lib
 
@@ -58,9 +61,6 @@ addlClassesDir=AddlClasses
 
 # Test logging configuration
 testLoggingProperties="test.logging.properties"
-
-# Code coverage tool installation
-cobertura.dir=cobertura
 
 # Java client application manifest
 manifestForJAR=ManifestJAR.txt
