--- a/build.xml
+++ b/build.xml
@@ -21,16 +21,12 @@
     <fileset dir="${envLibsDir}">
       <include name="**/*.jar"/>
     </fileset>
-  </path>
-
-  <!-- Setup for Cobertura - code coverage evaluation tool -->
-  <path id="cobertura.classpath">
-    <fileset dir="${cobertura.dir}">
-      <include name="cobertura.jar"/>
-      <include name="lib/**/*.jar"/>
+    <fileset dir="${testLibsDir}">
+    	<include name="**/*.jar"/>
     </fileset>
   </path>
-  <taskdef classpathref="cobertura.classpath" resource="tasks.properties"/>
+
+  <taskdef classpathref="project.class.path" resource="tasks.properties"/>
 
   <!-- clean out previously built project files -->
   <target name="clean">
@@ -51,6 +47,7 @@
     <mkdir dir="${genDir}/bin"/>
   	<mkdir dir="${addlClassesDir}"/>
   	<mkdir dir="${envLibsDir}"/>
+	<mkdir dir="${testLibsDir}"/>
   </target>
 
   <!-- compilation -->
@@ -111,13 +108,6 @@
       -->
       <classpath location="${instDir}"/>
       <classpath location="${buildDir}"/>
-
-      <!--
-        The instrumented classes reference classes used by the
-        Cobertura runtime, so Cobertura and its dependencies
-        must be on your classpath.
-      -->
-      <classpath refid="cobertura.classpath"/>
 
       <classpath>
         <path refid="project.class.path"/>
@@ -186,13 +176,6 @@
       -->
       <classpath location="${instDir}"/>
       <classpath location="${buildDir}"/>
-
-      <!--
-        The instrumented classes reference classes used by the
-        Cobertura runtime, so Cobertura and its dependencies
-        must be on your classpath.
-      -->
-      <classpath refid="cobertura.classpath"/>
 
       <!-- set log4j.configuration system property -->
       <jvmarg value="-Dlog4j.configuration=file:${testLoggingProperties}"/>
