Removed use of EnvLibs directory - commented it out in build properties and xml files.

--- a/build.properties
+++ b/build.properties
@@ -48,9 +48,9 @@ genDir=generated
 javadocDir=javadoc
 
 # JARs required at compile-time only - not to be included in WAR
-envLibsDir=EnvLibs
+#envLibsDir=EnvLibs
 
-# JARs required at compile tome to support testing - not to be included in JAR
+# JARs required at compile time to support testing - not to be included in JAR
 testLibsDir=test-lib
 
 # JARs required for compiling and runtime
