--- a/.classpath
+++ b/.classpath
@@ -2,15 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="Source/Java"/>
 	<classpathentry kind="lib" path="dist/SemanticWorkbench.jar"/>
-	<classpathentry kind="lib" path="lib/arq-2.8.1.jar"/>
 	<classpathentry kind="lib" path="lib/aterm-java-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/icu4j-3.4.4.jar"/>
-	<classpathentry kind="lib" path="lib/iri-0.7.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.2-tests.jar"/>
-	<classpathentry kind="lib" path="lib/jena-2.6.2.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-jdk1.5.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.13.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-2.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-cli.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-core.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-datatypes.jar"/>
@@ -25,16 +19,24 @@
 	<classpathentry kind="lib" path="lib/pellet-query.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-rules.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-test.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.5.6.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
-	<classpathentry kind="lib" path="lib/xercesImpl-2.7.1.jar"/>
 	<classpathentry kind="lib" path="test-lib/asm-2.2.1.jar"/>
 	<classpathentry kind="lib" path="test-lib/asm-tree-2.2.1.jar"/>
 	<classpathentry kind="lib" path="test-lib/cobertura.jar"/>
 	<classpathentry kind="lib" path="test-lib/jakarta-oro-2.0.8.jar"/>
 	<classpathentry kind="lib" path="test-lib/junit-4.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/jena-arq-2.9.0-incubating.jar"/>
+	<classpathentry kind="lib" path="lib/jena-iri-0.9.0-incubating.jar"/>
+	<classpathentry kind="lib" path="lib/jena-core-2.7.0-incubating.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.6.4.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
