Added support for providing a SPARQL server endpoint using the reasoned model. Added support to read/write SPARQL queries from/to files. Added support to write SPARQL results to a file. Added support for an HTTP proxy for executing SPARQL queries against remote service endpoints.

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,8 +1,14 @@
 # Setup root logger
-log4j.rootLogger=debug, logfile, stdout
+log4j.rootLogger=warn, logfile, stdout
 
 # Log the main class at debug level
-#log4j.logger.com.monead.semantic.workbench.SemanticWorkbench=debug
+log4j.logger.com.monead.semantic.workbench.SemanticWorkbench=debug
+
+# Log the SPARQL server classes at debug
+log4j.logger.com.monead.semantic.workbench.sparqlservice=debug
+
+# Always limit the apache package's logging
+log4j.logger.org.apache=warn
 
 # stdout is set to be a ConsoleAppender.
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
