Added check for more recent version to alert user if an update is available. Modified the reasoner selection to simplify addition of model and reasoner choices.

--- a/log4j.properties
+++ b/log4j.properties
@@ -7,6 +7,10 @@ log4j.logger.com.monead.semantic.workbench.SemanticWorkbench=debug
 # Log the SPARQL server classes at debug
 log4j.logger.com.monead.semantic.workbench.sparqlservice=debug
 
+# Log the Version Info class at trace
+log4j.logger.com.monead.semantic.workbench.utilities.CheckLatestVersion=debug
+
+
 # Always limit the apache package's logging
 log4j.logger.org.apache=warn
 
