--- a/log4j.properties
+++ b/log4j.properties
@@ -4,6 +4,9 @@ log4j.rootLogger=warn, logfile, stdout
 # Log the main class at debug level
 log4j.logger.com.monead.semantic.workbench.SemanticWorkbench=debug
 
+# Log the SPARQL table model at debug level
+log4j.logger.com.monead.semantic.workbench.SparqlTableModel=debug
+
 # Log the SPARQL server classes at debug
 log4j.logger.com.monead.semantic.workbench.sparqlservice=debug
 
