--- a/Source/Java/log4j.properties
+++ b/Source/Java/log4j.properties
@@ -6,6 +6,8 @@ log4j.logger.com.monead.semantic.workbench.SemanticWorkbench=debug
 
 # Log the SPARQL table model at debug level
 log4j.logger.com.monead.semantic.workbench.SparqlTableModel=debug
+log4j.logger.com.monead.semantic.workbench.SparqlResultItem=debug
+log4j.logger.com.monead.semantic.workbench.SparqlResultItemRenderer=debug
 
 # Log the SPARQL server classes at debug
 log4j.logger.com.monead.semantic.workbench.sparqlservice=debug
