--- a/.classpath
+++ b/.classpath
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="Source/Java"/>
-	<classpathentry kind="lib" path="dist/SemanticWorkbench.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/aterm-java-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang.jar"/>
 	<classpathentry kind="lib" path="lib/icu4j-3.4.4.jar"/>
+	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.6.4.jar"/>
+	<classpathentry kind="lib" path="lib/jena-arq-2.11.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-core-2.11.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-iri-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-sdb-1.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-tdb-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-jdk1.5.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-cli.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-core.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-datatypes.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-dig.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-el.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-explanation.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-jena.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-modularity.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-owlapi.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-owlapiv3.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-pellint.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-query.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-rules.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-test.jar"/>
-	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
-	<classpathentry kind="lib" path="test-lib/asm-2.2.1.jar"/>
-	<classpathentry kind="lib" path="test-lib/asm-tree-2.2.1.jar"/>
-	<classpathentry kind="lib" path="test-lib/cobertura.jar"/>
-	<classpathentry kind="lib" path="test-lib/jakarta-oro-2.0.8.jar"/>
-	<classpathentry kind="lib" path="test-lib/junit-4.5.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jena-arq-2.9.0-incubating.jar"/>
-	<classpathentry kind="lib" path="lib/jena-iri-0.9.0-incubating.jar"/>
-	<classpathentry kind="lib" path="lib/jena-core-2.7.0-incubating.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.4.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/xercesImpl-2.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
