--- a/Source/Java/log4j.properties
+++ b/Source/Java/log4j.properties
@@ -12,6 +12,9 @@ log4j.logger.com.monead.semantic.workbench.SparqlResultItemRenderer=debug
 # Log the SPARQL server classes at debug
 log4j.logger.com.monead.semantic.workbench.sparqlservice=debug
 
+# Log the GUI Utilities classes at debug
+log4j.logger.com.monead.semantic.workbench.utilities.GuiUtilities=debug
+
 # Log the Version Info class at trace
 log4j.logger.com.monead.semantic.workbench.utilities.CheckLatestVersion=debug
 
