Added support for construct queries that modify the local model. Added history feature for holding prior SPARQL queries and allowing back/forward navigation through them. Moved reasoner definitsion to an enum and included all the Jena reasoner lievels as well as Pellet.

--- a/Source/Java/log4j.properties
+++ b/Source/Java/log4j.properties
@@ -15,9 +15,11 @@ log4j.logger.com.monead.semantic.workbench.sparqlservice=debug
 # Log the GUI Utilities classes at debug
 log4j.logger.com.monead.semantic.workbench.utilities.GuiUtilities=debug
 
-# Log the Version Info class at trace
+# Log the Version Info class at debug
 log4j.logger.com.monead.semantic.workbench.utilities.CheckLatestVersion=debug
 
+# Log the Query History operations at debug
+log4j.logger.com.monead.semantic.workbench.queries=debug
 
 # Always limit the apache package's logging
 log4j.logger.org.apache=warn
