--- a/.classpath
+++ b/.classpath
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="Source/Java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/aterm-java-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang.jar"/>
+	<classpathentry kind="lib" path="lib/commons-csv-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.2.6.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-cache-4.2.6.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/icu4j-3.4.4.jar"/>
-	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.6.4.jar"/>
-	<classpathentry kind="lib" path="lib/jena-arq-2.11.1.jar"/>
-	<classpathentry kind="lib" path="lib/jena-core-2.11.1.jar"/>
-	<classpathentry kind="lib" path="lib/jena-iri-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/jena-sdb-1.4.1.jar"/>
-	<classpathentry kind="lib" path="lib/jena-tdb-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.6.jar"/>
+	<classpathentry kind="lib" path="lib/jena-arq-2.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-core-2.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-iri-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jena-tdb-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jgrapht-jdk1.5.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="lib/jsonld-java-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/libthrift-0.9.2.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-cli.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-core.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-datatypes.jar"/>
@@ -26,15 +35,12 @@
 	<classpathentry kind="lib" path="lib/pellet-query.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-rules.jar"/>
 	<classpathentry kind="lib" path="lib/pellet-test.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.6.4.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.4.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.6.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.6.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="lib/httpmime-4.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.2.3.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.2.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_17"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
