Upgraded to Jena 2.13. Added support for loading and saving ontologies using RDF/JSON and JSON_LD. Added SPARQL result export support for JSON.

--- a/build.xml
+++ b/build.xml
@@ -53,7 +53,7 @@
   <!-- compilation -->
   <target name="compile" depends="init">
     <!-- Compile the java code from ${srcJavaDir} into ${buildDir} -->
-    <javac srcdir="${srcJavaDir}" destdir="${buildDir}" debug="Yes" source="${sourceVersion}">
+    <javac srcdir="${srcJavaDir}" destdir="${buildDir}" debug="Yes" source="${sourceVersion}" target="${sourceVersion}">
       <classpath refid="project.class.path"/>
     </javac>
   </target>
