--- a/.classpath
+++ b/.classpath
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="Source/Java"/>
-	<classpathentry kind="lib" path="lib/aterm-java-1.6.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/aterm-java-1.8.2-p1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-csv-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.3.2.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.2.6.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient-cache-4.2.6.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.2.5.jar"/>
-	<classpathentry kind="lib" path="lib/httpmime-4.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/icu4j-3.4.4.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-annotations-2.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-2.3.3.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-databind-2.3.3.jar"/>
-	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.6.jar"/>
-	<classpathentry kind="lib" path="lib/jena-arq-2.13.0.jar"/>
-	<classpathentry kind="lib" path="lib/jena-core-2.13.0.jar"/>
-	<classpathentry kind="lib" path="lib/jena-iri-1.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/jena-tdb-1.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/jgrapht-jdk1.5.jar"/>
-	<classpathentry kind="lib" path="lib/jsonld-java-0.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/libthrift-0.9.2.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-cli.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-core.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-datatypes.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-el.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-explanation.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-jena.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-modularity.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-owlapiv3.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-pellint.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-query.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-rules.jar"/>
-	<classpathentry kind="lib" path="lib/pellet-test.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.6.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.6.jar"/>
-	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/wstx-asl-3.2.9.jar"/>
+	<classpathentry kind="lib" path="lib/jena-arq-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-base-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-core-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-iri-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-shaded-guava-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jsonld-java-0.7.0.jar"/>
+	<classpathentry kind="lib" path="lib/jsonld-java-sesame-0.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-cli-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-core-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-examples-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-explanation-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-jena-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-modularity-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-owlapi-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-pellint-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/pellet-query-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/stringtemplate-3.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_17"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/shared-objects-1.4.9-p1.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jjtraveler-0.6.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-jdk1.5-0.7.3.jar"/>
+	<classpathentry kind="lib" path="lib/dexx-collections-0.2.jar"/>
+	<classpathentry kind="lib" path="lib/libthrift-0.9.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
